# minicpm-v-4.6-orangepi

./: .gitignore  CMakeLists.txt  README.md  README_ZH.md  compare_language_logits.py  run_minicpmv_hybrid.py
bench/: README.md  bench_ddr_bandwidth.cpp  bench_decode.cpp  bench_decode_subops.cpp  bench_matmul_throughput.cpp  bench_matmul_w4a16.cpp  bench_matmul_w8a8.cpp  bench_npu_bandwidth.cpp  bench_prefill.cpp
custom_ops/: add_custom.json  attention_step_custom.json  linear_causal_conv_custom.json  linear_causal_conv_step_custom.json  linear_gated_delta_rule_custom.json  linear_gated_delta_rule_step_custom.json  silu_mul_custom.json  test_add_custom_aclnn.cpp
custom_ops/cmake/util/: ascendc_bin_param_build.py  ascendc_impl_build.py  ascendc_ops_config.py
custom_ops/op_host/: add_custom.cpp  add_custom_tiling.h  attention_step_custom_tiling.h  linear_causal_conv_custom.cpp  linear_causal_conv_custom_tiling.h  linear_causal_conv_step_custom.cpp  linear_gated_delta_rule_custom.cpp  linear_gated_delta_rule_custom_tiling.h  linear_gated_delta_rule_step_custom.cpp  linear_gated_delta_rule_step_custom_tiling.h  matmul_cube_custom.cpp  matmul_vec_custom_tiling.h  rms_norm1024_custom_tiling.h  silu_mul_custom.cpp  silu_mul_custom_tiling.h
custom_ops/op_kernel/: add_custom.cpp  attention_step_custom.cpp  gated_rms_norm_z_custom.cpp  linear_causal_conv_custom.cpp  linear_causal_conv_step_custom.cpp  linear_gated_delta_rule_custom.cpp  linear_gated_delta_rule_step_custom.cpp  matmul_vec_custom.cpp  rms_norm1024_custom.cpp  silu_mul_custom.cpp
engine/: CMakeLists.txt  README.md
engine/include/minicpmv/: acl_context.h  decoder_layer.h  language_model.h  ops.h  weights.h
engine/scripts/: build.sh  set_env.sh
engine/src/: acl_context.cpp  decoder_layer.cpp  language_model.cpp  ops.cpp  tensor.cpp  weights.cpp
engine/tests/: bench_decode.cpp  bench_matmul_vec.cpp  bench_prefill.cpp  bench_step_kernel.cpp  test_autoregressive_decode.cpp  test_decoder_stack.cpp  test_elementwise.cpp  test_embedding.cpp  test_full_language_model.cpp  test_incremental_decode.cpp  test_language_logits_dump.cpp  test_layer3_decoder_layer.cpp  test_layer3_full_attention.cpp  test_layer3_full_attention_front.cpp  test_layer_norm.cpp  test_linear_attention_conv.cpp  test_linear_attention_gated_delta_cpu.cpp  test_linear_attention_projection.cpp  test_lm_head_pipeline.cpp  test_lm_profile.cpp  test_matmul.cpp  test_matmul_cube.cpp  test_partial_rope.cpp  test_partial_rope_ref.cpp  test_prefill_from_embeddings.cpp  test_rms_norm1024.cpp  test_token_forward.cpp  test_weights_load.cpp
scripts/: build.sh  install_custom_ops.sh  set_env.sh
src/csrc/custom_ops/: CMakePresets.json  gated_rms_norm_z_custom.json  matmul_cube_custom.json  matmul_vec_custom.json  matmul_w4a16_custom.json  matmul_w8a8_i32_custom.json  rms_norm_1024_custom.json  test_rms_norm1024_aclnn.cpp  w8a8_dequant_custom.json  w8a8_quantize_custom.json
src/csrc/custom_ops/cmake/: config.cmake
src/csrc/custom_ops/op_host/: attention_step_custom.cpp  gated_rms_norm_z_custom.cpp  gated_rms_norm_z_custom_tiling.h  linear_causal_conv_step_custom_tiling.h  matmul_cube_custom_tiling.h  matmul_vec_custom.cpp  matmul_w4a16_custom.cpp  matmul_w4a16_custom_tiling.h  matmul_w8a8_i32_custom.cpp  matmul_w8a8_i32_custom_tiling.h  rms_norm1024_custom.cpp  w8a8_dequant_custom.cpp  w8a8_dequant_custom_tiling.h  w8a8_quantize_custom.cpp  w8a8_quantize_custom_tiling.h
src/csrc/custom_ops/op_kernel/: linear_gated_delta_rule_step_custom.cpp  matmul_cube_custom.cpp  matmul_w4a16_custom.cpp  matmul_w8a8_i32_custom.cpp  silu_mul_custom.cpp  w8a8_dequant_custom.cpp  w8a8_quantize_custom.cpp
src/csrc/custom_ops/scripts/: install.sh
src/csrc/include/minicpmv/: decoder_layer.h  language_model.h  ops.h  quantized_weight.h  tensor.h  vision.h  weights.h
src/csrc/lib/: decoder_layer.cpp  language_model.cpp  ops.cpp  quantized_weight.cpp  tensor.cpp  vision.cpp  weights.cpp
src/csrc/tools/: minicpmv_hybrid_decode.cpp
src/python/: compare_logits.py  gradio_app.py  run_hybrid.py
src/python/minicpmv/: __init__.py  session.py
tests/: test_autoregressive_decode.cpp  test_awq_quant_probe.cpp  test_cast.cpp  test_decoder_stack.cpp  test_full_language_model.cpp  test_incremental_decode.cpp  test_language_logits_dump.cpp  test_layer3_decoder_layer.cpp  test_layer3_full_attention.cpp  test_layer3_full_attention_front.cpp  test_linear_attention_conv.cpp  test_linear_attention_gated_delta_cpu.cpp  test_linear_attention_projection.cpp  test_linear_causal_conv_step.cpp  test_lm_profile.cpp  test_matmul_awq.cpp  test_matmul_w4a16.cpp  test_matmul_w8a8_i32.cpp  test_natural_b_matmul.cpp  test_prefill_from_embeddings.cpp  test_prefix_cache.cpp  test_rms_norm.cpp  test_token_forward.cpp  test_vision_ops.cpp  test_vision_patch_embed.cpp  test_w4a16_quantized_weight.cpp  test_w8a8_dequant.cpp  test_weight_quant_probe.cpp  test_weights_load.cpp
